<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_margin="5dp"
    android:background="#00233E"
    android:weightSum="3"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        android:layout_weight="0"
        android:layout_marginTop="20dp"
        android:textStyle="bold" />



    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="3"
        android:columnCount="2"
        android:padding="10dp"
        android:rowCount="1">

        <!-- First Row-->

        <androidx.cardview.widget.CardView
            android:id="@+id/currencyCV"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="85dp"
                    android:layout_height="88dp"
                    android:layout_gravity="center"
                    android:src="@drawable/currency" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/currency"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/weightCV"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            app:cardCornerRadius="10dp"
            app:cardMaxElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center">

            <ImageView
                android:layout_width="85dp"
                android:layout_height="88dp"
                android:layout_gravity="center"
                android:src="@drawable/weight" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:gravity="center"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- Second Row-->

        <androidx.cardview.widget.CardView
            android:id="@+id/timeCV"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center">

            <ImageView
                android:layout_width="85dp"
                android:layout_height="88dp"
                android:layout_gravity="center"
                android:src="@drawable/time" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/lengthCV"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            app:cardCornerRadius="10dp"
            app:cardMaxElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center">

            <ImageView
                android:layout_width="85dp"
                android:layout_height="88dp"
                android:layout_gravity="center"
                android:src="@drawable/length" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/length"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Third Row-->

        <androidx.cardview.widget.CardView
            android:id="@+id/areaCV"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center">

            <ImageView
                android:layout_width="85dp"
                android:layout_height="88dp"
                android:layout_gravity="center"
                android:src="@drawable/area" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/area"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/temperatureCV"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            app:cardCornerRadius="10dp"
            app:cardMaxElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center">

            <ImageView
                android:layout_width="85dp"
                android:layout_height="88dp"
                android:layout_gravity="center"
                android:src="@drawable/temperature" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>

    </LinearLayout>

